test(compat): preserve Java 17 SDK build